* Changes up to version 2.1

** Server

Users are now stored in the database rather than a configuration file.

The server now has a built-in list of stopwords and players, so only
additions to these need be mentioned in the configuration file.

The default inter-track gap is now 0s.

How sound is played is now controlled via the new 'api' configuration
command.  This also controls how the volume is set, which now works with
ALSA as well as OSS.

** Web Interface

The web interface now uses cookies to remember user identity, and allows
online registration of new users.  Also it is no longer necessary to
manually specify the URL of the web interface (but you can override it
if you don't like the value it figures out).

It is possible to allow users to register via the web interface.

The web interface's browser support has been improved.  It has been
tested with Firefox 2, Safari 3, Konqueror 3, Internet Explorer 7 and
Opera 9.

* Changes up to version 2.0

** General

Tracks can now have tags associated with them.  See tags in disorder(1)
or the preferences documentation for the web interface or Disobedience.

The search facility knows how to limit results by tag (see search
documentation for any interface) as well as by word search.  It is
possible to limit random play by tag (see required-tags and
prohibited-tags in disorder_config(5)).

Unicode support is improved.  Case-folding and word breaking now follows
the rules given in the Unicode standard (with a bit of tailoring in the
latte case).

** Disobedience

There is a new client, 'Disobedience', that depends on the GTK+ library.
Feedback on the interface would be very welcome.

** Web Interface

The "New" screen display tracks recently added to the database.  From
here they can be played or their preferences changed.

Long track names are truncated so they fit better on the screen.  Hover
for the full name.

** Network Play

DisOrder can broadcast audio over a network, allowing it to be played on