@@ -1,20 +1,0 @@
-DisOrder on FreeBSD
-===================
-
-The server builds on FreeBSD, using the ports system to supply many of
-its dependencies.  It is not well tested in this environment.  In
-particular, since my FreeBSD VM lacks sound support, only network play
-has been tested.
-
-You must use gmake to build DisOrder.
-
-After installation you can use scripts/setup to install the server
-(creating a 'jukebox' user, etc).
-
-  ./configure
-  gmake
-  sudo gmake install
-  sudo scripts/setup
-  sudo disorder setup-guest [--no-online-registration]
-
-Please report successes and failures!
