@@ -1,16 +1,0 @@
-DisOrder on OS X
-================
-
-The server builds on OS X, using Fink to supply many of its
-dependencies.  It is not well tested in this environment.
-
-After installation you can use scripts/setup to install the server
-(creating a 'jukebox' user, etc).
-
-  ./configure
-  make
-  sudo make install
-  sudo scripts/setup
-  sudo disorder setup-guest [--no-online-registration]
-
-Please report successes and failures!
